add a setup guide for Windows in README.md

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@ cache_data.sqlite
 etfcalc/__pycache__
 etfcalc/util/__pycache__
 examples/
+
+*.pyc
+
+# folders created by PyCharm
+.idea/
+build/
+dist/
